[package]
name = "async-tempfile"
version = "0.0.0"
authors = [
    "Andrey Vasnetsov <vasnetsov93@gmail.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4"
tempfile = "3.8"
thiserror = "1.0"
tokio = { version = "1.32", default-features = false, features = ["fs", "rt"] }
