[package]
name = "common"
version = "0.0.0"
authors = [
    "Andrey Vasnetsov <vasnetsov93@gmail.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2024"
publish = false

[lints]
workspace = true

[features]
testing = []

[dependencies]
bitvec = { workspace = true }
bytemuck = { workspace = true }
fs-err = { workspace = true }
num-traits = { workspace = true }
num_cpus = "1.17"
ordered-float = { workspace = true }
ph = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tap = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
validator = { workspace = true }
lazy_static = "1.5.0"
memmap2 = { workspace = true }
semver = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
zerocopy = { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
atomicwrites = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
memory = { path = "../memory" }

[dev-dependencies]
common = { path = ".", features = ["testing"] }
criterion = { workspace = true }
fs-err = { workspace = true, features = ["debug"] }
itertools = { workspace = true }
rstest = { workspace = true }
self_cell = "1.2.0"
serde_json = { workspace = true }
tango-bench = "0.6.0"

[target.'cfg(target_os = "linux")'.dependencies]
thread-priority = "3.0.0"

[[bench]]
name = "bitpacking"
harness = false

[[bench]]
name = "bitpacking_tango"
harness = false

[[bench]]
name = "mmap_hashmap"
harness = false

[[bench]]
name = "hw_counter"
harness = false

[[bench]]
name = "atomic_stop"
harness = false
