[package]
name = "dataset"
version = "0.0.0"
authors = [
    "Andrey Vasnetsov <andrey@qdrant.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.98"
flate2 = { version = "1.1.1" }
indicatif = { workspace = true }
reqwest = { workspace = true }
